tests/machine/x/cpp/q1.error
tests/machine/x/cpp/q1.cpp:64:12: error: ‘row’ was not declared in this scope
   64 |   decltype(row.l_returnflag) returnflag;
      |            ^~~
tests/machine/x/cpp/q1.cpp:64:12: error: ‘row’ was not declared in this scope
tests/machine/x/cpp/q1.cpp:65:12: error: ‘row’ was not declared in this scope
   65 |   decltype(row.l_linestatus) linestatus;
      |            ^~~
tests/machine/x/cpp/q1.cpp:65:12: error: ‘row’ was not declared in this scope
tests/machine/x/cpp/q1.cpp:68:12: error: ‘row’ was not declared in this scope
   68 |   decltype(row) row;
      |            ^~~
tests/machine/x/cpp/q1.cpp:68:12: error: ‘row’ was not declared in this scope
tests/machine/x/cpp/q1.cpp: In lambda function:
tests/machine/x/cpp/q1.cpp:227:31: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  227 |       auto __key = Result{row.l_returnflag, row.l_linestatus};
      |                           ~~~~^~~~~~~~~~~~
      |                               |
      |                               std::string {aka std::__cxx11::basic_string<char>}
tests/machine/x/cpp/q1.cpp:231:41: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  231 |           __g.items.push_back(__struct3{row});
